# zino

./: .codecov.yml  .dockerignore  .editorconfig  .git-blame-ignore-revs  .gitignore  .mega-linter.yml  .pre-commit-config.yaml  .readthedocs.yaml  .sonarcloud.properties  AUTHORS.md  CHANGELOG.md  Dockerfile  LICENSE  Makefile  NOTICE  README.md  docker-compose.yml  polldevs.cf.example  pyproject.toml  sonar-project.properties  tox.ini  zino.toml.example
.github/: pull_request_template.md
.github/workflows/: docker-images.yml  format.yml  linter.yml  publish-test-results.yml  tests.yml  towncrier.yml
changelog.d/: +113.added.md  +346.added.md  +498.added.md  +ac_down-timedelta.fixed.md  +add-docs-dir.added.md  +api-fallback-latin1.fixed.md  +async-before-event-creation.fixed.md  +bump-netsnmp.changed.md  +closed-events-index.changed.md  +config-logging.added.md  +debug-log-snmp-details.added.md  +debug-log-trap-ids.added.md  +docker-host-networking-traps.fixed.md  +docker-image-release-build.fixed.md  +dummy-clearflap.added.md  +dump-state-on-exit.fixed.md  +job-tracking.added.md  +linktraps-schedule-verification.added.md  +linktraps.added.md  +lock-apscheduler-version.changed.md  +log-timeouts-without-tracebacks.fixed.md  +microsecond-timestamps-in-jobnames.fixed.md  +misfire-grace-time.added.md  +no-duplicate-events.fixed.md  +no-notifications-after-scavenged.fixed.md  +poll-single-interface-ifindex.fixed.md  +poll-single-interface-timeouts.fixed.md  +privilege-drop-numeric-uid.added.md  +pysnmp.changed.md  +reduce-loglevel-for-unresolvable-traps.changed.md  +reduce-max-repetitions.changed.md  +reduce-trap-issue-loglevel.changed.md  +reduce-trap-loglevel.changed.md  +run-jobs-on-event-loop.fixed.md  +skip-bfd-conversion.changed.md  +suppress-portstate-for-new-ports.changed.md  +systemd-net-bind-capability.fixed.md  +test-for-not-getting-closed-event.added.md  +timeout-debug.added.md  +use-copy-for-statedump.fixed.md  (+89 more)
docs/: conf.py  configuration.rst  development.rst  index.rst  installation.rst
docs/explanation/: architecture.rst  concepts.rst  index.rst  overview.rst
docs/howtos/: controlling-zino-with-systemd.rst  upgrade-from-zino-1.rst  use-docker-image.rst  using-zping.rst  write-docs.rst  zino.service.example
mibs/: IF-MIB
requirements/: dev.txt
src/zino/: __init__.py  compat.py  convertstate.py  debug.py  events.py  flaps.py  getuptime.py  job_tracker.py  jobs.py  linedata.py  oid.py  planned_maintenance.py  polltest.py  scheduler.py  snmp.py  state.py  statemodels.py  time.py  trapd.py  utils.py  zino.py  zping.py
src/zino/api/: auth.py  legacy.py  notify.py  server.py
src/zino/config/: __init__.py  models.py  polldevs.py
src/zino/jobs/: __init__.py  fauxpolljob.py  job.py  reachablejob.py
src/zino/mibdumps/: BFD-TC-STD-MIB.py  CISCO-BGP4-MIB.py  CISCO-CONFIG-MAN-MIB.py  CISCO-IETF-BFD-MIB.py  CISCO-SMI.py  IANA-BFD-TC-STD-MIB.py  IANA-RTPROTO-MIB.py  IANAifType-MIB.py  IF-MIB.py  OLD-CISCO-SYSTEM-MIB.py  OLD-CISCO-TCP-MIB.py  OLD-CISCO-TS-MIB.py  OSPF-MIB.py  PIM-MIB.py
src/zino/snmp/: __init__.py  agent.py  base.py  netsnmpy_backend.py  pysnmp_backend.py
src/zino/stateconverter/: bfd_converter.py  bgp_converter.py  convertstate.py  event_converter.py  flapping_converter.py  linedata.py  pm_converter.py  port_converter.py  utils.py
src/zino/tasks/: __init__.py  addrs.py  bfdtask.py  bgpstatemonitortask.py  errors.py  fauxpolltask.py  juniperalarmtask.py  linkstatetask.py  plannedmaintenancetask.py  reachabletask.py  task.py  vendor.py
src/zino/trapd/: __init__.py  base.py  netsnmpy_backend.py  pysnmp_backend.py  straps_backend.py
src/zino/trapobservers/: bfd_traps.py  bgp_traps.py  ignored_traps.py  link_traps.py  logged_traps.py
tests/: __init__.py  bin_test.py  compat_test.py  config_test.py  conftest.py  convertstate_test.py  events_test.py  flaps_test.py  getuptime_test.py  linedata_test.py  oid_test.py  planned_maintenance_test.py  scheduler_test.py  snmp_test.py  state_test.py  statemodels_test.py  test_debug.py  test_job_tracker.py  test_zping.py  trapd_test.py  utils_test.py  zino1_state.tcl  zino_test.py
tests/api/: auth_test.py  conftest.py  legacy_test.py  notify_test.py  server_test.py
tests/config/: models_test.py  polldevs_test.py
tests/snmp/: agent_test.py  max_repetitions_test.py  netsnmpy_backend_test.py  pysnmp_backend_test.py
tests/snmp_fixtures/: cisco-bfd-down.snmprec  cisco-bfd-up.snmprec  cisco-bgp-admin-down.snmprec  cisco-bgp-admin-up.snmprec  cisco-bgp-external-reset.snmprec  cisco-bgp-oper-down-short.snmprec  cisco-bgp-oper-down.snmprec  cisco-bgp.snmprec  general-bgp-admin-down.snmprec  general-bgp-admin-up.snmprec  general-bgp-external-reset.snmprec  general-bgp-oper-down-short.snmprec  general-bgp-oper-down.snmprec  general-bgp.snmprec  ip-ad-ent-addr.snmprec  ipadentaddr.snmprec  juniper-alarm-wrong.snmprec  juniper-alarm-zero.snmprec  juniper-alarm.snmprec  juniper-bfd-down.snmprec  juniper-bfd-up.snmprec  juniper-bgp-admin-down.snmprec  juniper-bgp-admin-up.snmprec  juniper-bgp-external-reset.snmprec  juniper-bgp-oper-down-short.snmprec  juniper-bgp-oper-down.snmprec  juniper-bgp.snmprec  linksadmindown.snmprec  linksdown.snmprec  linksup.snmprec  missing-info-bgp.snmprec  public.snmprec
tests/stateconverter/: convertstate_test.py  linedata_test.py
tests/stateconverter/fixtures/: zino1_state.tcl  zino1_state_invalid_event_attr.tcl
tests/statemodels/: conftest.py  device_maintenance_test.py  planned_maintenance_test.py  portstate_maintenance_test.py  statemodels_test.py
tests/tasks/: conftest.py  test_addrs.py  test_bfdtask.py  test_bgpstatemonitortask.py  test_fauxpolltask.py  test_init.py  test_juniperalarmtask.py  test_linkstatetask.py  test_reachabletask.py  test_run_all_tasks.py  test_task.py  test_vendor.py
tests/tcl_fixtures/: zino1_state.tcl
tests/trapd/: __init__.py  netsnmp_backend_test.py  pysnmp_backend_test.py  test_straps_backend.py
tests/trapobservers/: bfd_traps_test.py  bgp_traps_test.py  conftest.py  ignored_traps_test.py  link_traps_test.py  logged_traps_test.py
(+27 files in other folders)
