[build-system]
requires = ["setuptools>=61.0", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "Zino"
description = "Robust network management system for large backbone networks"
authors = [{name="Sikt - Kunnskapssektorens Tjenesteleverandør", email="kontakt@sikt.no"}]
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
classifiers = [
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Networking :: Monitoring",
]
dependencies = [
    "apscheduler",
    "pyasyncore; python_version >= '3.12'",  # Due to a deficiency in pysnmplib; can be removed when fixed
    "pydantic>=2.7.0",
    "pysnmplib",
    "aiodns",
    "tomli; python_version < '3.11'",
    "netsnmp-cffi>=0.1.1",
]
dynamic = ["version"]

[project.urls]
"Homepage" = "https://github.com/Uninett/zino"

[project.scripts]
zino = "zino.zino:main"
zinoconv = "zino.stateconverter.convertstate:main"

[project.optional-dependencies]
docs = ["sphinx>=2.2.0"]

[tool.setuptools]
include-package-data = true
zip-safe = false
platforms = ["any"]

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests*"]

[tool.setuptools.package-data]
"*" = [
    "*.rst",
]
"zino.snmp" = [
    "mibs/*",
]

[tool.setuptools.exclude-package-data]
"*" = ["tests/"]

[tool.setuptools_scm]
write_to = "src/zino/version.py"

[tool.ruff]
line-length = 120
target-version = "py39"
extend-exclude = [
    "mibdumps", "docs"
]
# Exclude files even when passed directly as argument (for MegaLinter)
force-exclude = true

[tool.isort]
profile = "black"
src_paths = ["src", "tests"]

[tool.coverage.report]
# Regexes for lines to exclude from consideration
exclude_also = [
    # Don't need coverage for ellipsis used for type annotations
    "\\.\\.\\.",
    # Don't complain about lines excluded unless type checking
    "if TYPE_CHECKING:",
    # We don't need tests to cover unimplementedness
    "raise NotImplementedError",
]


[tool.towncrier]
directory = "changelog.d"
filename = "CHANGELOG.md"
start_string = "<!-- towncrier release notes start -->\n"
underlines = ["", "", ""]
title_format = "## [{version}] - {project_date}"
issue_format = "[#{issue}](https://github.com/Uninett/zino/issues/{issue})"
wrap = false

[[tool.towncrier.type]]
directory = "security"
name = "Security"
showcontent = true

[[tool.towncrier.type]]
directory = "removed"
name = "Removed"
showcontent = true

[[tool.towncrier.type]]
directory = "deprecated"
name = "Deprecated"
showcontent = true

[[tool.towncrier.type]]
directory = "added"
name = "Added"
showcontent = true

[[tool.towncrier.type]]
directory = "changed"
name = "Changed"
showcontent = true

[[tool.towncrier.type]]
directory = "fixed"
name = "Fixed"
showcontent = true
