[build-system]
requires = ["setuptools>=80.3.1", "wheel", "setuptools_scm[toml]>=8.3.1"]
build-backend = "setuptools.build_meta"

[project]
name = "Zino"
description = "Robust network management system for large backbone networks"
authors = [{name="Sikt - Norwegian Agency for Shared Services in Education and Research", email="kontakt@sikt.no"}]
readme = "README.md"
requires-python = ">=3.9"
license = "Apache-2.0"
classifiers = [
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Networking :: Monitoring",
]
dependencies = [
    "apscheduler~=3.11",
    "pydantic>=2.7.0",
    "pysnmp~=6.2",
    "aiodns",
    "tomli; python_version < '3.11'",
    "netsnmp-cffi>=0.1.2",
]
dynamic = ["version"]

[project.urls]
"Homepage" = "https://nordu.net/zino/"
"GitHub" = "https://github.com/Uninett/zino"
"Changelog" = "https://github.com/Uninett/zino/blob/master/CHANGELOG.md"
"Documentation" = "https://zino.readthedocs.io/en/latest/"

[project.scripts]
zino = "zino.zino:main"
zinoconv = "zino.stateconverter.convertstate:main"

[project.optional-dependencies]
docs = ["sphinx>=2.2.0"]

[tool.setuptools]
include-package-data = true
zip-safe = false
platforms = ["any"]

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests*"]

[tool.setuptools.package-data]
"*" = [
    "*.rst",
]
"zino.snmp" = [
    "mibs/*",
]

[tool.setuptools.exclude-package-data]
"*" = ["tests/"]

[tool.setuptools_scm]
write_to = "src/zino/version.py"

[tool.ruff]
line-length = 120
target-version = "py39"
extend-exclude = [
    "mibdumps", "docs"
]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]
fixable = ["I"]

[tool.coverage.report]
# Regexes for lines to exclude from consideration
exclude_also = [
    # Don't need coverage for ellipsis used for type annotations
    "\\.\\.\\.",
    # Don't complain about lines excluded unless type checking
    "if TYPE_CHECKING:",
    # We don't need tests to cover unimplementedness
    "raise NotImplementedError",
]

[tool.coverage.run]
source = ["src"]
omit = ["**/zino/version.py"]
patch = ["subprocess"]

[tool.towncrier]
directory = "changelog.d"
filename = "CHANGELOG.md"
start_string = "<!-- towncrier release notes start -->\n"
underlines = ["", "", ""]
title_format = "## [{version}] - {project_date}"
issue_format = "[#{issue}](https://github.com/Uninett/zino/issues/{issue})"
wrap = false

[[tool.towncrier.type]]
directory = "security"
name = "Security"
showcontent = true

[[tool.towncrier.type]]
directory = "removed"
name = "Removed"
showcontent = true

[[tool.towncrier.type]]
directory = "deprecated"
name = "Deprecated"
showcontent = true

[[tool.towncrier.type]]
directory = "added"
name = "Added"
showcontent = true

[[tool.towncrier.type]]
directory = "changed"
name = "Changed"
showcontent = true

[[tool.towncrier.type]]
directory = "fixed"
name = "Fixed"
showcontent = true
