[tool.poetry]
name = "zino"
version = "0.0.0"  # Managed by poetry-dynamic-versioning
description = "Robust network management system for large backbone networks"
authors = ["Sikt - Norwegian Agency for Shared Services in Education and Research <kontakt@sikt.no>"]
readme = "README.md"
license = "Apache-2.0"
homepage = "https://nordu.net/zino/"
repository = "https://github.com/Uninett/zino"
documentation = "https://zino.readthedocs.io/en/latest/"
classifiers = [
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Networking :: Monitoring",
]
packages = [{include = "zino", from = "src"}]
include = [
    "src/zino/**/*.rst",
    "src/zino/snmp/mibs/*",
]

[tool.poetry.scripts]
zino = "zino.zino:main"
zinoconv = "zino.stateconverter.convertstate:main"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
apscheduler = "~3.11"
pydantic = ">=2.7.0"
pysnmp = "~6.2"
aiodns = "*"
tomli = {version = "*", python = "<3.11"}
# netsnmp-cffi only has Linux x86_64 wheels - use markers to make it platform-specific
netsnmp-cffi = {version = ">=0.1.4", markers = "sys_platform == 'linux' and platform_machine == 'x86_64'"}

[tool.poetry.group.docs.dependencies]
sphinx = ">=2.2.0"

[tool.poetry.group.test.dependencies]
coverage = "*"
pexpect = "*"
pytest = ">7"
pytest-asyncio = "<0.22.0"
pytest-cov = "*"
pytest-timeout = "*"
retry = "*"
snmpsim = ">=1.0,!=1.1.6,<1.2"
tox = "*"

[tool.poetry.group.maintenance.dependencies]
build = "*"
twine = "*"
towncrier = "*"

[tool.poetry.group.dev.dependencies]
ruff = "*"
pre-commit = "*"
ipython = "*"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "pep440"
pattern = "default-unprefixed"

[tool.poetry-dynamic-versioning.files."src/zino/version.py"]
persistent-substitution = true
initial-content = """
# This file is auto-generated by poetry-dynamic-versioning
__version__ = "0.0.0"
"""

[tool.ruff]
line-length = 120
target-version = "py39"
extend-exclude = [
    "mibdumps", "docs"
]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]
fixable = ["I"]

[tool.coverage.report]
# Regexes for lines to exclude from consideration
exclude_also = [
    # Don't need coverage for ellipsis used for type annotations
    "\\.\\.\\.",
    # Don't complain about lines excluded unless type checking
    "if TYPE_CHECKING:",
    # We don't need tests to cover unimplementedness
    "raise NotImplementedError",
]

[tool.coverage.run]
source = ["src"]
omit = ["**/zino/version.py", "**/zino/snmp/mibdumps/*.py"]
patch = ["subprocess"]

[tool.towncrier]
directory = "changelog.d"
filename = "CHANGELOG.md"
start_string = "<!-- towncrier release notes start -->\n"
underlines = ["", "", ""]
title_format = "## [{version}] - {project_date}"
issue_format = "[#{issue}](https://github.com/Uninett/zino/issues/{issue})"
wrap = false

[[tool.towncrier.type]]
directory = "security"
name = "Security"
showcontent = true

[[tool.towncrier.type]]
directory = "removed"
name = "Removed"
showcontent = true

[[tool.towncrier.type]]
directory = "deprecated"
name = "Deprecated"
showcontent = true

[[tool.towncrier.type]]
directory = "added"
name = "Added"
showcontent = true

[[tool.towncrier.type]]
directory = "changed"
name = "Changed"
showcontent = true

[[tool.towncrier.type]]
directory = "fixed"
name = "Fixed"
showcontent = true
